c_fms/c_fms.h

#define NAME_LENGTH 64 
extern int cFMS_define_domains(int* global_indices, int* layout, int *npelist, int *pelist, 
                               int *xflags, int *yflags, int *xhalo, int *yhalo, int* xextent, int *yextent,
                               bool *maskmap, char *name, bool *symmetry, int* memory_size,
                               int *whalo, int *ehalo, int *shalo, int *nhalo, bool *is_mosaic,
                               int *tile_count, int *tile_id, bool *complete, int *x_cyclic_offset,
                               int *y_cyclic_offset);
extern void cFMS_define_io_domain(int* io_layout, int *domain_id);
extern void cFMS_define_layout(int* global_indices, int *ndivs, int* layout);
extern int cFMS_define_nest_domains(int *num_nest, int *ntiles, int* nest_level, int* tile_fine, int* tile_course,
                                    int* istart_coarse, int* icount_coarse, int* jstart_coarse, int* jcount_coarse,
                                    int* npes_nest_tile, int* x_refine, int* y_refine, int* domain_id,
                                    int *extra_halo, char *name);
extern bool cFMS_domain_is_initialized(int *domain_id);
extern void cFMS_get_compute_domain(int *domain_id, int *xbegin, int *xend, int *ybegin, int *yend,
                                    int *xsize, int *xmax_size, int *ysize, int *ymax_size,
                                    bool *x_is_global, bool *y_is_global, int *tile_count, int *position,
                                    int *whalo, int *shalo);
  
extern void cFMS_get_data_domain(int *domain_id, int *xbegin, int *xend, int *ybegin, int *yend,
                                 int *xsize, int *xmax_size, int *ysize, int *ymax_size,
                                 bool *x_is_global, bool *y_is_global, int *tile_count, int *position,
                                 int *whalo, int *shalo);
extern void cFMS_get_domain_name(char *domain_name_c, int *domain_id);
extern void cFMS_get_domain_pelist(int* pelist, int *domain_id);
extern void cFMS_get_layout(int* layout, int *domain_id);
extern void cFMS_set_compute_domain(int *domain_id, int *xbegin, int *xend, int *ybegin, int *yend,
                                    int *xsize, int *ysize, bool *x_is_global, bool *y_is_global, int *tile_count,
                                    int *whalo, int *shalo);
extern void cFMS_set_current_domain(int *domain_id);